syntax = "proto3";

//school_class:  用于 管理中小学班级设置

package cfwf.micro_service.school_class;
option java_package = "com.cfwf.micro_service.school_class";

service SchoolClass {
  //获取学校班级(分页返回)
  rpc SearchSchoolClass (SearchSchoolClassRequest) returns (SearchSchoolClassResponse) {}  

  //获取某班级信息
  rpc GetSchoolClassInfo (GetSchoolClassInfoRequest) returns (GetSchoolClassInfoResponse) {} 

  //获取某班级信息
  rpc GetSchoolClassInfoById (GetSchoolClassInfoByIdRequest) returns (GetSchoolClassInfoResponse) {} 
  
  //创建班级
  rpc CreateSchoolClass(CreateSchoolClassRequest) returns (CreateSchoolClassResponse) {}

  //批量创建班级
  rpc BatchCreateSchoolClass(BatchCreateSchoolClassRequest) returns (CommonResponse) {}
  
  //删除班级
  rpc RemoveSchoolClass (RemoveSchoolClassRequest) returns (CommonResponse) {}
    
  //归档班级 ArchiveSchoolClass
  rpc ArchiveSchoolClass (ArchiveSchoolClassRequest) returns (CommonResponse) {}
 
  //设置班主任
  rpc SetSchoolClassTeacher (SetSchoolClassTeacherRequest) returns (CommonResponse) {}
  
  //获取某用户为班主任的班级
  rpc SearchClassByHeadTeacher (SearchClassByHeadTeacherRequest) returns (SearchClassByHeadTeacherResponse) {}
}

//通用rpc调用返回结果
enum RPC_CALL_RESULT {
   RPC_CALL_RESULT_NONE        = 0;   //不应出现
   RPC_CALL_RESULT_SUCCESS     = 1;   //成功
   RPC_CALL_RESULT_DB_ERROR    = 2;   //数据库出错：数据库连接失败、操作失败等
   RPC_CALL_RESULT_INPUT_ERROR = 3;   //传入数据格式错误或不合法
   RPC_CALL_RESULT_ITEM_NOT_EXIST  = 4;   //对应条目不存在，"获取"["删除"/"修改"]单条数据时，若找不到对应数据，则返回该值
   RPC_CALL_RESULT_ITEM_HAS_EXIST  = 5;   //对应条目已存在，"创建"单条数据或批量数据时，若发现已存在相同数据则返回该值； "修改"时，发现除了要修改的对象外，还有其他数据和修改后的数据出现重复时，则不做修改并返回该值
}


//一般rpc调用返回值
message CommonResponse{
	RPC_CALL_RESULT result = 1;
	string msg = 2;
}

//班级信息
message SchoolClassInfo{  
    fixed64 schoolid = 1;        //学校id
    fixed64 classid = 2;         //班级id     
	
    int32 period = 3;            //阶段： 1=小学  2=初中 3=高中
    int32 grade_year = 4;        //学届:  2016= 2016年下半年开学的  小学一年级 / 初一 /高一
    
    int32 grade = 5;             //当前年级   1-6：小学  7-9：初中 11-13：高中  
    int32 class_no = 6;          //班级序号
    
    fixed64 head_teacherid = 7;  //班主任id
    fixed64 assist_teacherid = 8;  //副班主任id
    
    bool be_archived = 9;        //是否已归档： 创建班级的
}

//查询班级信息列表(SearchSchoolClass) 
message SearchSchoolClassRequest{    
    int32 pagesize = 1;        //每页条数
    int32 page = 2;            //当前页。如果>总页数，则返回最后一页的数据
    
    fixed64 schoolid = 3;      //学校id，必填
    string classid = 4;        //指定classid, 可传入多个classid: classid1,classid2...
    int32 period = 5;            //阶段： 1=小学  2=初中 3=高中
    string grade_year = 6;     //学届: 可多个: 2016,2017..  
    string grade = 7;          //当前年级: 可多个: 1,2,3 ...
    string class_no = 8;       //班级序号: 可多个: 1,2,3 ...   
    
    bool include_archived = 9; //也搜索已归档的班级
}

message SearchSchoolClassResponse{
    RPC_CALL_RESULT result = 1;
	
	int32 pagesize = 2;        //每页条数
    int32 page = 3;            //当前页
    int32 pagecount = 4;       //总页数
    int32 recordcount = 5;     //总条数
    
    repeated SchoolClassInfo list = 6; //当前页结果列表
}

//获取某班级信息 GetSchoolClassInfo 、 GetSchoolClassInfoById： 不会查找已归档的班级
message GetSchoolClassInfoByIdRequest{
    fixed64 classid = 1;      //班级id
}

message GetSchoolClassInfoRequest{
    fixed64 schoolid = 1;       //学校id
    
    int32 period = 2;           //阶段： 1=小学  2=初中 3=高中
    int32 grade_year = 3;       //学届  如果period 和grade_year不为0，则忽略 grade
    int32 grade = 4;            //当前年级：使用此字段，会存在需要判断升年级时间的问题    
    int32 class_no = 5;         //班级序号
    
    bool create_if_not_exist = 6; //如果不存在该班级是否自动创建
    fixed64 operatorid = 7;
}
    
message GetSchoolClassInfoResponse{
    RPC_CALL_RESULT result = 1;
    SchoolClassInfo info = 2;
}


//创建班级 CreateSchoolClass。如果班级不存在，则创建之，返回成功，若已存在，则不创建，返回成功
message CreateSchoolClassRequest{
    fixed64 operatorid = 1;
    SchoolClassInfo info = 2; //SchoolClassInfo.classid 可由调用者指定(必须全局唯一)，也可置零，由微服务自己生成。 如果指定id，则检查是否已存在相同id，若存在则返回错误。 不会创建归档的班级，忽略SchoolClassInfo.be_archived字段
}
    
message CreateSchoolClassResponse{
    RPC_CALL_RESULT result = 1;
    string errmsg = 2; //如果创建失败，则指明失败原因
    SchoolClassInfo info = 3; //如果创建成功，返回创建的班级信息
}


//批量创建班级 BatchCreateSchoolClass
message BatchCreateSchoolClassRequest{
    fixed64 operatorid = 1;
    repeated SchoolClassInfo list = 2; //如果指定id，则检查是否已存在相同id，若任一条已存在，则返回错误。不会创建归档的班级，忽略SchoolClassInfo.be_archived字段
}
  

//删除班级 RemoveSchoolClass
message RemoveSchoolClassRequest{
    fixed64 operatorid = 1;
    fixed64 schoolid = 2;     //学校id
    repeated fixed64 classid = 3; //可批量删除
}
  
//归档班级 ArchiveSchoolClass
message ArchiveSchoolClassRequest{
    fixed64 operatorid = 1;
    fixed64 schoolid = 2;     //学校id
    repeated fixed64 classid = 3; //可批量归档
}

//设置班主任 SetSchoolClassTeacher
message SetSchoolClassTeacherRequest{
    fixed64 operatorid = 1;
    fixed64 schoolid = 2;     //学校id
    fixed64 classid = 3;     //
    
    fixed64 head_teacherid = 4;     //班主任
    fixed64 assist_teacherid = 5;     //副班主任
}

  
//获取某用户为班主任的班级
message SearchClassByHeadTeacherRequest{
    fixed64 schoolid = 1;     //学校id
    fixed64 teacherid = 2;     //班主任或副班主任的id
}

message SearchClassByHeadTeacherResponse{
    RPC_CALL_RESULT result = 1;
    repeated SchoolClassInfo list = 2; //结果列表，不分页，返回全部
}


